# voker-assessment

./: README.md
backend/: pyproject.toml
backend/app/: dependencies.py  main.py  settings.py
backend/app/enums/: __init__.py  item_type.py
backend/app/models/: __init__.py  item.py  order.py
backend/app/routers/: orders.py
backend/app/schemas/: __init__.py  orders.py
backend/app/services/: __init__.py  create_order_service.py  interpret_order_message_service.py  llm_service.py  order_storage.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: app.css
frontend/src/lib/: types.ts
frontend/src/lib/components/atoms/: ItemTotalCard.svelte  OrderHistoryRow.svelte
frontend/src/lib/components/organisms/: OrderHistory.svelte  PlaceOrder.svelte
frontend/src/lib/components/ui/button/: index.ts
frontend/src/lib/components/ui/textarea/: textarea.svelte
frontend/src/lib/composables/: useOrderString.ts  useQueries.ts
frontend/src/routes/: +layout.svelte  +page.svelte
